--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,6 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
 article {
 	width: 100%;
 	display: inline-block;
@@ -89,7 +88,6 @@ h1 {
 	margin: 0 2.5% 0 2.5%;
 	width: 95%;
 }
-
 div.gallery {
 	margin-top: 5%;
  	margin-left: 2.5%;
@@ -203,5 +201,15 @@ footer p{
     	border: 1px solid #ccc;
     	width: 95%;
 	}
-	
+	.animation{
+		position: relative;
+   		padding-bottom: 2.5%;
+    	padding-top: 2.5px;
+    	height: 100%;
+    	overflow: hidden;
+	}
+	.animation iframe {
+    	width: 100%;
+    	height: 100%;
+	}
 }
